Fix bad wrapping on firefox

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -104,6 +104,7 @@
       }
 
       .date {
+        white-space: nowrap;
         font-family: $font-tertiary;
         font-size: 32px;
         line-height: 1em;
